fix #199: fix build for asmjs-unknown-emscripten

--- a/examples/showcase/static/index.html
+++ b/examples/showcase/static/index.html
@@ -1,12 +1,31 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Yew • Showcase</title>
-        <script type="text/javascript" src="https://unpkg.com/ccxt"></script>
-    </head>
-    <body>
-        <script src="js/app.js"></script>
-    </body>
-</html>
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Yew • Showcase</title>
+    <script type="text/javascript" src="https://unpkg.com/ccxt"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" name="viewport" />
+    <script>
+        var Module = {};
+        var __cargo_web = {};
+        Object.defineProperty( Module, 'canvas', {
+            get: function() {
+                if( __cargo_web.canvas ) {
+                    return __cargo_web.canvas;
+                }
+
+                var canvas = document.createElement( 'canvas' );
+                document.querySelector( 'body' ).appendChild( canvas );
+                __cargo_web.canvas = canvas;
+
+                return canvas;
+            }
+        });
+    </script>
+</head>
+<body>
+    <script src="showcase.js"></script>
+</body>
+</html>
