bugfix(index): cargo web command consistence
Notice that the "cargo web start" command indexing "js/app.js"
while the output "cargo web deploy" command have only "game_of_life.js".
Tried running proving the latter referencing also work with "start"
command.

--- a/examples/game_of_life/static/index.html
+++ b/examples/game_of_life/static/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
-        <script src="js/app.js"></script>
+        <script src="game_of_life.js"></script>
     </body>
 </html>
 
