Fix styles of TodoMVC example

--- a/examples/showcase/static/index.html
+++ b/examples/showcase/static/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <script src="js/app.js"></script>
+        <script src="/showcase.js"></script>
     </body>
 </html>
 
