--- a/examples/todomvc/static/index.html
+++ b/examples/todomvc/static/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Yew • TodoMVC</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css"/ >
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.1.2/index.css" />
     </head>
     <body>
-        <script src="js/app.js"></script>
+        <script src="/todomvc.js"></script>
     </body>
 </html>
 
