--- a/yew-stdweb/examples/todomvc/static/index.html
+++ b/yew-stdweb/examples/todomvc/static/index.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.1.2/index.css" />
     </head>
     <body>
-        <script src="/todomvc.js"></script>
+        <script src="/todomvc_std_web.js"></script>
     </body>
 </html>
