--- a/yew-router/examples/static/index.html
+++ b/yew-router/examples/static/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Yew example</title>
         <script type="module">
-			import init from "./wasm.js"
+			import init from "/wasm.js"
 			init()
 		</script>
     </head>
