--- a/examples/game_of_life/static/index.html
+++ b/examples/game_of_life/static/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Yew • Game of Life</title>
+        <title>Yew Sample App</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" href="favicon.ico">
+        <script type="module">
+            import init from "./wasm.js"
+            init()
+        </script>
     </head>
-    <body>
-        <script src="game_of_life.js"></script>
-    </body>
-</html>
+    <body></body>
+</html>>
