--- a/examples/game_of_life/static/index.html
+++ b/examples/game_of_life/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Yew Sample App</title>
+        <title>Yew • Game of Life</title>
         <link rel="stylesheet" href="styles.css">
         <script type="module">
             import init from "./wasm.js"
