--- a/examples/game_of_life/static/index.html
+++ b/examples/game_of_life/static/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Yew • Game of Life</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" href="./styles.css">
+        <script type="module">
+            import init from "./wasm.js"
+            init()
+        </script>
     </head>
-    <body>
-        <script src="game_of_life.js"></script>
-    </body>
+    <body></body>
 </html>
